--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <img src="https://via.placeholder.com/300x200" alt="Miniatura do vídeo 1">
       <h3>Título do Vídeo 1</h3>
       <p>Descrição do vídeo 1. Um resumo breve sobre o conteúdo do vídeo.</p>
-      <a href="#">Assistir</a>
+      <a href="https://www.youtube.com/embed/AFQsU6Bxc5k?si=aSAkZ9ktgxZzjNJY" />
     </div>
     <div class="video-card">
-      <img src="https://via.placeholder.com/300x200" alt="Miniatura do vídeo 2">
+      <img src="https://via.placeholder.com/300x200" alt="aSAkZ9ktgxZzjNJY">
       <h3>Título do Vídeo 2</h3>
       <p>Descrição do vídeo 2. Um resumo breve sobre o conteúdo do vídeo.</p>
       <a href="#">Assistir</a>
