--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
       <img src="https://via.placeholder.com/300x200" alt="Miniatura do vídeo 1">
       <h3>Título do Vídeo 1</h3>
       <p>Descrição do vídeo 1. Um resumo breve sobre o conteúdo do vídeo.</p>
-      <a href=<iframe width="560" height="315" src="https://www.youtube.com/embed/AFQsU6Bxc5k?si=-4vX3dNwjhILFUBh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> /
-        >
+      <iframe href=<iframe width="560" height="315" src="https://www.youtube.com/embed/AFQsU6Bxc5k?si=-4vX3dNwjhILFUBh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
     <div class="video-card">
       <img src="https://via.placeholder.com/300x200" alt="aSAkZ9ktgxZzjNJY">
